--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -5,5 +5,6 @@ edition = "2024"
 
 [dependencies]
 bcrypt = "0.17.1"
+rand = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
