--- a/backend/Cargo.toml
+++ b/backend/Cargo.toml
@@ -8,3 +8,6 @@ bcrypt = "0.17.1"
 rand = "0.8.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
+
+# Local path dependency on the http crate
+rusthttp = { path = "rusthttp" }
